--- a/src/rollout/views/components/analysisrunstatus/AnalysisRunStatus.scss
+++ b/src/rollout/views/components/analysisrunstatus/AnalysisRunStatus.scss
@@ -4,3 +4,7 @@
     border: 2px solid #D2D2D2;
     padding: 4px 8px 4px 8px;
 }
+
+.gitops_admin_plugin__tight_description_list {
+    --pf-c-description-list--m-compact--RowGap: 0.2rem;
+}
